--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div id="shareLink"></div>
 
     <script>
-        const apiKey = ''; // Replace with your JSONBin API key
-        const binId = ''; // Replace with your JSONBin Bin ID
+        const apiKey = '$2a$10$MfILAsk98rXfo/zMguCE1Owhm1qRGWgR68iHjZPmf79a8NtCtllaW'; // Replace with your JSONBin API key
+        const binId = '66479fbbad19ca34f86afbaf'; // Replace with your JSONBin Bin ID
 
         async function saveNote() {
             const noteContent = document.getElementById('notepad').value;
