--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="shareLink"></div>
 
     <script>
-        const apiKey = '$2a$10$MfILAsk98rXfo/zMguCE1Owhm1qRGWgR68iHjZPmf79a8NtCtllaW'; // Replace with your JSONBin API key
+        const apiKey = '$2a$10$jXblppI5ss.WgNeeE4GiyefvKCRfr8Wbn3Gxz6Mo300PTcvdH4H3q'; // Replace with your JSONBin API key
         const binId = '66479fbbad19ca34f86afbaf'; // Replace with your JSONBin Bin ID
 
         async function saveNote() {
