--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div id="shareLink"></div>
 
     <script>
-        const apiKey = '$2a$10$MfILAsk98rXfo/zMguCE1Owhm1qRGWgR68iHjZPmf79a8NtCtllaW'; // Replace with your JSONBin API key
-        const binId = '66479fbbad19ca34f86afbaf'; // Replace with your JSONBin Bin ID
+        const apiKey = '$2a$10$jXblppI5ss.WgNeeE4GiyefvKCRfr8Wbn3Gxz6Mo300PTcvdH4H3q'; // Your JSONBin Master Key
+        const binId = '66479fbbad19ca34f86afbaf'; // Your JSONBin Bin ID
 
         async function saveNote() {
             const noteContent = document.getElementById('notepad').value;
@@ -43,7 +43,25 @@
                 history.replaceState(null, '', newUrl);
             }
 
-            const data = { [noteId]: noteContent };
+            // Fetch existing data and update it
+            let existingData = {};
+            try {
+                const response = await fetch(`https://api.jsonbin.io/v3/b/${binId}/latest`, {
+                    headers: {
+                        'X-Master-Key': apiKey
+                    }
+                });
+
+                if (response.ok) {
+                    const result = await response.json();
+                    existingData = result.record || {};
+                }
+            } catch (error) {
+                console.warn('Error fetching existing data:', error);
+            }
+
+            // Update the note with the current noteId
+            existingData[noteId] = noteContent;
 
             try {
                 const response = await fetch(`https://api.jsonbin.io/v3/b/${binId}`, {
@@ -52,7 +70,7 @@
                         'Content-Type': 'application/json',
                         'X-Master-Key': apiKey
                     },
-                    body: JSON.stringify(data)
+                    body: JSON.stringify(existingData)
                 });
 
                 if (response.ok) {
